operator/pkg/gateway-api/testdata/gateway/tcproute-simple-same-namespace/output/tcproute-gateway-conformance-infra-tcp-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: gateway-conformance-infra-tcp-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tcproute
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: tcp-backend-simple
          port: 8080
status:
  parents:
    - conditions:
        - message: Accepted TCPRoute
          reason: Accepted
          status: "True"
          type: Accepted
          lastTransitionTime: "2026-02-25T00:00:00Z"
        - message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
          lastTransitionTime: "2026-02-25T00:00:00Z"
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: gateway-tcproute
        namespace: gateway-conformance-infra
